# FaucetHut

./: .replit  FaucetHut.sln  README.md  pyproject.toml
FaucetHut/: .gitignore  FaucetHut.pyproj  runserver.py
FaucetHut/FaucetHut/: __init__.py  forms.py  views.py
FaucetHut/FaucetHut/static/content/: bootstrap.css  bootstrap.min.css  site.css
FaucetHut/FaucetHut/templates/: api_info.html  banano.json  index.html  index_min.html  layout.html
FaucetHut/app/: faucetinfo.py
FaucetHut/app_script/: faucetinfo.py  faucets.txt  games.txt
FaucetHut/libs/: bananopy.py
