[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
python-lsp-server = "^1.5.0"
debugpy = "^1.6.2"
python-dotenv = "^0.20.0"
cloudscraper = "^1.2.60"
fake-useragent = "^0.1.11"
pymongo = "^4.2.0"
Flask = "^2.1.3"
requests = "^2.28.1"
dnspython = "^2.2.1"
waitress = "^2.1.2"
gunicorn = "^20.1.0"
Flask-Compress = "^1.12"
gevent = "^21.12.0"
Flask-WTF = "^1.0.1"
config2 = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"